--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "es-graph",
+  "name": "shertu-graph",
   "version": "1.0.0",
   "description": "a simple graph lib",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "keywords": [
     "graph"
@@ -15,7 +14,7 @@
     "gts": "^3.1.0",
     "husky": "^7.0.4",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.4"
   }
 }
 
